# eternal_game_b

./: .gitignore  docker-compose.yml  pyproject.toml
game/alembic/: env.py
game/alembic/versions/: 2024_08_09_1506-42330b0b8338_start.py  2024_08_10_1801-a85465fc6b53_race.py  2024_08_10_1853-9452128df385_start.py
game/api/: __init__.py
game/api/api_v1/: __init__.py
game/core/: config.py
game/core/authentication/: transport.py
game/core/models/: __init__.py  db_helper.py
game/units/crud/: race_crud.py
game/units/models/: __init__.py  race.py
game/units/schemas/: race.py
history-kareliy-app/: main.py
history-kareliy-app/actions/: create_superuser.py
history-kareliy-app/alembic/versions/: 2024_06_30_1349-e0e223c77076_create_table_users.py  2024_06_30_1449-600d1f04ce63_create_table_access_tokens.py  2024_06_30_1756-953b364784ec_fix_users.py  2024_06_30_2207-6d0b46faccd3_fix_users.py
history-kareliy-app/api/api_v1/: __init__.py  auth.py  fastapi_users_router.py  messages.py  users.py
history-kareliy-app/api/dependencies/: access_tokens.py  backend.py  users.py
history-kareliy-app/core/: config.py
history-kareliy-app/core/authentication/: user_manager.py
history-kareliy-app/core/models/: __init__.py  access_token.py  base.py  db_helper.py  user.py
history-kareliy-app/core/schemas/: user.py
src/: .env.template  main.py
src/actions/: create_superuser.py
src/alembic/: env.py
src/alembic/versions/: 2024_08_11_1513-d49db257bb55_grade.py  (+12 more)
src/api/api_v1/: __init__.py  (+1 more)
src/core/: config.py
src/game/: __init__.py
tests/: test_grade.py
(+53 files in other folders)
